--- a/src/styles/form.css
+++ b/src/styles/form.css
@@ -8,3 +8,37 @@
 	text-align : right;
 }
 
+
+form button {
+	display: block;
+	width: 100%;
+	appearance: none;
+	border-radius: 5px;
+	background-color: #84c00c;
+	color: #fff;
+	border: none;
+	font-size: 16px;
+	height: 40px;
+	margin-top: 30px;
+}
+
+form button:hover {
+	background-color: #669509;
+}
+
+form button:disabled {
+	background-color: #dbf99f;
+	color: #333;
+}
+
+form button.small {
+	display: inline-block;
+	width: auto;
+	padding: 0 20px;
+	background-color: #777;
+	font-size: 14px;
+}
+
+form button.small:hover {
+	  background-color: #999;
+}
