--- a/src/styles/form.css
+++ b/src/styles/form.css
@@ -1,44 +1,113 @@
 
 .dd-label {
-	font-family : "Lucida Console", Monaco, monospace;
+	font-family: "Palatino Linotype", "Book Antiqua", Palatino, serif;
 	padding-top : 15px;
 }
 
-.total {
-	text-align : right;
+.results {
+	padding-top: 100px;
+
 }
 
+.total {
+	padding-top: 10px;
+	text-align : right;
+	position: relative;
+	right: 100px;
+}
 
-form button {
-	display: block;
+.price {
+	text-align: right;
+	position: relative;
+	right: 100px;
+	top: 3px;
+	bottom: 35px;
+}
+
+form {
+	padding-top: 10px;
+}
+
+h1 {
+	font-family: "Palatino Linotype", "Book Antiqua", Palatino, serif;
+	text-align: center;
+}
+
+button {
+	display: inline-block;
 	width: 100%;
 	appearance: none;
 	border-radius: 5px;
-	background-color: #84c00c;
 	color: #fff;
 	border: none;
 	font-size: 16px;
 	height: 40px;
-	margin-top: 30px;
 }
 
-form button:hover {
+button:hover {
 	background-color: #669509;
 }
 
-form button:disabled {
+button:disabled {
 	background-color: #dbf99f;
 	color: #333;
 }
 
-form button.small {
+
+button.smallRemove {
 	display: inline-block;
 	width: auto;
-	padding: 0 20px;
-	background-color: #777;
+	padding: 0px 50px;
+	background-color: #FF0000;
 	font-size: 14px;
+	margin-left: 800px;
+	position: relative;
+	top: 5px;
 }
 
-form button.small:hover {
-	  background-color: #999;
+h3 {
+	display: inline-block;
+	font-size: 30px;
+	margin: 0px;
+	padding-top: 10px;
+	position: relative;
+	top: 20px;
+
+
 }
+
+button.smallRemove:hover {
+	  background-color: #8B0000;
+}
+
+
+button.smallAdd {
+	background-color: #32CD32;
+	display: inline-block;
+	width: auto;
+	padding: 0 50px;
+	font-size: 14px;
+
+	
+}
+
+button.smallAdd:hover {
+	background-color: #008000;
+}
+
+button.smallSubmit {
+	background-color: #0000FF;
+	position: relative;
+	top: 20px;
+}
+
+button.smallSubmit:hover{
+	background-color: #000080;
+
+}
+
+.hrResults{
+	border: 0;
+	border-bottom: 1px dashed #ccc;
+}
+
