--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -40,10 +40,11 @@ p {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  margin-top: 100px;
+  margin-top: 50px;
 }
+
 .App p {
-  margin-bottom: 50px;
+  margin-bottom: 0px;
   font-size: 2.4rem;
 }
 .wrapper {
@@ -53,8 +54,9 @@ p {
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
-  width: 330px;
+  width: 900px;
 }
+
 .dd-wrapper {
   -webkit-user-select: none;
      -moz-user-select: none;
@@ -62,6 +64,8 @@ p {
           user-select: none;
   position: relative;
   width: 222px;
+  padding: 5px 0px;
+  margin-right: 500px;
 }
 .dd-header {
   display: -webkit-box;
