--- a/src/styles/form.css
+++ b/src/styles/form.css
@@ -69,7 +69,7 @@ h3 {
 	margin: 0px;
 	padding-top: 10px;
 	position: relative;
-	top: 20px;
+	top: 5px;
 
 
 }
@@ -97,6 +97,7 @@ button.smallSubmit {
 	background-color: #0000FF;
 	position: relative;
 	top: 20px;
+	margin-bottom: 100px;
 }
 
 button.smallSubmit:hover{
